--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <div class="head">
 
-          <h1 class="head-name">Sachin kumar</h1>
+          <h1 class="head-name">Sachin Kumar</h1>
           <p class="head-title">Front-End / Backend Engineer</p>
 
           <!--- contact and profile links -->
