--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
           <div class="education">
             <h3 class="sub-heads">Education</h3>
-            <p class="sub-title">MCA(hons.)<span id="sub-title-span"> @ Lovely profesional university</span></p>
+            <p class="sub-title">MCA(hons.)<span id="sub-title-span"> @ Lovely Professional University</span></p>
             <p class="date">Aug  2020 <span id="sub-title-span">- Present</span></p>
 
-            <p class="sub-title">BCA(hons.)<span id="sub-title-span"> @ Lovely profesional university</span></p>
+            <p class="sub-title">BCA(hons.)<span id="sub-title-span"> @ Lovely Professional University</span></p>
             <p class="date">Aug  2018 <span id="sub-title-span">- May  2020</span></p>
           </div>
 
@@ -63,10 +63,10 @@
 
             <!--- project 1 --->
             <p class="sub-title">Batch-Deletion <span id="sub-title-span">- CLI Tool</span></p>
-            <p class="written-in">Javascript / Python <span class="downloads"> 900 NPM Downloads</span></p>
+            <p class="written-in">JavaScript / Python <span class="downloads"> 900 NPM Downloads</span></p>
             <div class="description-container">
               <p class="symbol">&#9657;</p>
-              <p class="description">A command line based tool written Javascript / python. To delete multiple<br>
+              <p class="description">A command line based tool written in JavaScript / python. To delete multiple<br>
                 files in a directory with same filetype either recursively from multiple<br>
                 directories at same time or non-recursively.
               </p>
@@ -74,11 +74,11 @@
 
             <!--- project 2 --->
             <p class="sub-title">Sorting-Visualizer <span id="sub-title-span">- WEB App</span></p>
-            <p class="written-in">React Js / Typescript / Redux</p>
+            <p class="written-in">React Js / TypeScript / Redux</p>
             <div class="description-container">
               <p class="symbol">&#9657;</p>
-              <p class="description">A web app written in React Js and Typescript to visulize several sorting algorithms<br>
-                With clean and nice user interface.<br>
+              <p class="description">A web app written in React Js and TypeScript to visualize several sorting algorithms<br>
+                with clean and nice user interface.<br>
               </p>
             </div>
 
@@ -101,30 +101,30 @@
             <p class="sub-title">Open-Source</p>
             <div class="description-container">
               <p class="symbol">&#9657;</p>
-              <p class="description">I really like explorring new open-source projects, As i fell like it's a great way to keep<br>
-                yourself upto date with latest trends. And how other's write their code is also a<br> learing exprience for me.
+              <p class="description">I really like exploring new open-source projects as I feel like it's a great way to keep<br>
+                yourself upto date with latest trends and how others write their code is also a<br> learning experience for me.
               </p>
             </div>
             <div class="description-container">
               <p class="symbol">&#9657;</p>
-              <p class="description">Contributed to open-source project segmentio/asm, word-to-pdf.</p>
+              <p class="description">Contributed to open-source project segmentio/asm and word-to-pdf.</p>
             </div>
 
             <!--- competative --->
 
-            <p class="sub-title">Competative Progamming</p>
+            <p class="sub-title">Competitive Programming</p>
             <div class="description-container">
               <p class="symbol">&#9657;</p>
-              <p class="description">While i am wouldn't consider myself a compitative progammer but i like to keep<br> my brain fresh and active, with some competative Progamming problems at<br>
-              at various platforms ex: CodeChef, Leetcode, CodeForces.</p>
+              <p class="description">While I wouldn't consider myself a Competitive Programmer but I like to keep<br> my brain fresh and active with some Competitive Programming problems at<br>
+              various platforms like CodeChef, Leetcode, CodeForces and Hackerrank.</p>
             </div>
             <div class="description-container">
               <p class="symbol">&#9657;</p>
-              <p class="description">Came in top-50 more than 2 Times at codechef.</p>
+              <p class="description">Came in top-50 more than 2 Times at CodeChef.</p>
             </div>
             <div class="description-container">
               <p class="symbol">&#9657;</p>
-              <p class="description">Up to elimanation Round SnakDown 2021.</p>
+              <p class="description">Up to elimanation round in SnakDown 2021.</p>
             </div>
           </div>
 
@@ -176,7 +176,7 @@
 
           <div class="intrests" id="sub-heads">
             <h1 class="sub-heads">Interests</h1>
-            <p class="description" id="p-languages">Photo-Manuplation, Photography, Travelling,<br>
+            <p class="description" id="p-languages">Photo-Manipulation, Photography, Travelling,<br>
               Reading, Music, Gaming</p>
           </div>
 
