--- a/index.html
+++ b/index.html
@@ -1,188 +1,222 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sachin kumar</title>
     <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
+</head>
+
+<body>
     <div id="app">
 
         <!--- Header --->
 
         <div class="head">
 
-          <h1 class="head-name">Sachin Kumar</h1>
-          <p class="head-title">Front-End / Backend Engineer</p>
+            <h1 class="head-name">Sachin Kumar</h1>
+            <p class="head-title">Front-End / Backend Engineer</p>
 
-          <!--- contact and profile links -->
+            <!--- contact and profile links -->
 
-          <div class="head-links">
-            <div class="link">
-              <img src="./assets/icons/mail.svg" alt="icon">
-              <p>udhaybegyall@gmail.com</p>
+            <div class="head-links">
+                <div class="link">
+                    <img src="./assets/icons/mail.svg" alt="icon">
+                    <p>udhaybegyall@gmail.com</p>
+                </div>
+                <div class="link">
+                    <img src="./assets/icons/phone.svg" alt="icon">
+                    <p>+91 914-941-5460</p>
+                </div>
+                <div class="link">
+                    <img src="./assets/icons/linkedin.svg" alt="icon">
+                    <p>linkedin.com/in/udhaybegyall</p>
+                </div>
+                <div class="link">
+                    <img src="./assets/icons/github.svg" alt="icon">
+                    <p>github.com/udhaybegyall</p>
+                </div>
             </div>
-            <div class="link">
-              <img src="./assets/icons/phone.svg" alt="icon">
-              <p>+91 914-941-5460</p>
-            </div>
-            <div class="link">
-              <img src="./assets/icons/linkedin.svg" alt="icon">
-              <p>linkedin.com/in/udhaybegyall</p>
-            </div>
-            <div class="link">
-              <img src="./assets/icons/github.svg" alt="icon">
-              <p>github.com/udhaybegyall</p>
-            </div>
-          </div>
 
         </div>
 
         <div class="both-sides">
 
-          <!--- Left - side - cv --->
+            <!--- Left - side - cv --->
 
-        <div class="left-side">
+            <div class="left-side">
 
-          <!--- Education --->
+                <!--- Education --->
 
-          <div class="education">
-            <h3 class="sub-heads">Education</h3>
-            <p class="sub-title">MCA(hons.)<span id="sub-title-span"> @ Lovely Professional University</span></p>
-            <p class="date">Aug  2020 <span id="sub-title-span">- Present</span></p>
+                <div class="education">
+                    <h3 class="sub-heads">Education</h3>
+                    <p class="sub-title">MCA(hons.)<span id="sub-title-span"> @ Lovely Professional University</span>
+                    </p>
+                    <p class="date">Aug 2020 <span id="sub-title-span">- Present</span></p>
 
-            <p class="sub-title">BCA(hons.)<span id="sub-title-span"> @ Lovely Professional University</span></p>
-            <p class="date">Aug  2018 <span id="sub-title-span">- May  2020</span></p>
-          </div>
+                    <p class="sub-title">BCA(hons.)<span id="sub-title-span"> @ Lovely Professional University</span>
+                    </p>
+                    <p class="date">Aug 2018 <span id="sub-title-span">- May 2020</span></p>
 
-          <!--- Projects --->
+                    <p class="sub-title">High Secondary(12th) <span id="sub-title-span"> @ Army Public School</span>
+                    </p>
+                    <p class="date">Feb 2017 <span id="sub-title-span">- March 2018</span></p>
+                </div>
 
-          <div class="projects" id="sub-heads">
-            <h3 class="sub-heads">Projects</h3>
+                <!--- Projects --->
 
-            <!--- project 1 --->
-            <p class="sub-title">Batch-Deletion <span id="sub-title-span">- CLI Tool</span></p>
-            <p class="written-in">JavaScript / Python <span class="downloads"> 900 NPM Downloads</span></p>
-            <div class="description-container">
-              <p class="symbol">&#9657;</p>
-              <p class="description">A command line based tool written in JavaScript / python. To delete multiple<br>
-                files in a directory with same filetype either recursively from multiple<br>
-                directories at same time or non-recursively.
-              </p>
+                <div class="projects" id="sub-heads">
+                    <h3 class="sub-heads">Projects</h3>
+
+                    <!--- project 1 --->
+                    <p class="sub-title">Batch-Deletion <span id="sub-title-span">- CLI Tool</span></p>
+                    <p class="written-in">JavaScript / Python <span class="downloads"> 900 NPM Downloads</span></p>
+                    <div class="description-container">
+                        <p class="symbol">&#9657;</p>
+                        <p class="description">A command line based tool written in JavaScript / python. To delete
+                            multiple<br>
+                            files in a directory with same filetype either recursively from multiple<br>
+                            directories at same time or non-recursively.
+                        </p>
+                    </div>
+
+                    <!--- project 2 --->
+                    <p class="sub-title">Sorting-Visualizer <span id="sub-title-span">- WEB App</span></p>
+                    <p class="written-in">React Js / TypeScript / Redux</p>
+                    <div class="description-container">
+                        <p class="symbol">&#9657;</p>
+                        <p class="description">A web app written in React Js and TypeScript to visualize several sorting
+                            algorithms<br>
+                            with clean and nice user interface.<br>
+                        </p>
+                    </div>
+
+                    <!--- project 3 --->
+                    <p class="sub-title">Text-Generator <span id="sub-title-span">- NLP</span></p>
+                    <p class="written-in">Python</p>
+                    <div class="description-container">
+                        <p class="symbol">&#9657;</p>
+                        <p class="description">A Natural Language Processing project to predict the next word in a
+                            sentence based<br>
+                            on previous words in data being used using markov chains.<br>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="co-curriculars" id="sub-heads">
+                    <h1 class="sub-heads">Co-Curriculars</h1>
+
+                    <!--- open-source --->
+
+                    <p class="sub-title">Open-Source</p>
+                    <div class="description-container">
+                        <p class="symbol">&#9657;</p>
+                        <p class="description">I really like exploring new open-source projects as I feel like it's a
+                            great way to keep<br>
+                            yourself upto date with latest trends and how others write their code is also a<br> learning
+                            experience for me.
+                        </p>
+                    </div>
+                    <div class="description-container">
+                        <p class="symbol">&#9657;</p>
+                        <p class="description">Contributed to open-source project segmentio/asm and word-to-pdf.</p>
+                    </div>
+
+                    <!--- Minors --->
+
+                    <p class="sub-title">Minors</p>
+                    <div class="description-container">
+                        <p class="symbol">&#9657;</p>
+                        <p class="description">Had DataScience as a minor in my BCA. So I am also familiar with the
+                            various Machine<br> Learning Algorithms, Data Preprocessing and Data Manipulation.<br>
+                        </p>
+                    </div>
+                    <div class="description-container">
+                        <p class="symbol">&#9657;</p>
+                        <p class="description">Worked with tools like Tableau, RapidMiner.</p>
+                    </div>
+
+                    <!--- competative --->
+
+                    <p class="sub-title">Competitive Programming</p>
+                    <div class="description-container">
+                        <p class="symbol">&#9657;</p>
+                        <p class="description">While I wouldn't consider myself a Competitive Programmer but I like to
+                            keep<br> my brain fresh and active with some Competitive Programming problems at<br>
+                            various platforms like CodeChef, Leetcode, CodeForces and Hackerrank.</p>
+                    </div>
+                    <div class="description-container">
+                        <p class="symbol">&#9657;</p>
+                        <p class="description">Came in top-50 more than 2 Times at CodeChef.</p>
+                    </div>
+                    <div class="description-container">
+                        <p class="symbol">&#9657;</p>
+                        <p class="description">Up to elimanation round in SnakDown 2021.</p>
+                    </div>
+                </div>
+
             </div>
 
-            <!--- project 2 --->
-            <p class="sub-title">Sorting-Visualizer <span id="sub-title-span">- WEB App</span></p>
-            <p class="written-in">React Js / TypeScript / Redux</p>
-            <div class="description-container">
-              <p class="symbol">&#9657;</p>
-              <p class="description">A web app written in React Js and TypeScript to visualize several sorting algorithms<br>
-                with clean and nice user interface.<br>
-              </p>
+            <!--- Right - side --->
+            <div class="right-side">
+
+                <!--- Skills --->
+
+                <div class="skills">
+
+                    <!--- progamming Languages --->
+
+                    <h1 class="sub-heads">Skills</h1>
+                    <p class="sub-title">Programming Languages</p>
+                    <p class="description" id="p-languages">C, C++, Java, JavaScript (ES6)<br>
+                        TypeScript, Python, Go, Rust</p>
+
+                    <p class="sub-title">Web Languages</p>
+                    <p class="description" id="p-languages">HTML5, CSS, Sass, MarkDown<br>
+                    </p>
+
+                    <!--- Libraries & Frameworks --->
+
+                    <p class="sub-title">Libraries & Frameworks</p>
+                    <p class="description" id="p-languages">React, Node.Js, Express<br></p>
+
+                    <!--- Tools & Platforms --->
+
+                    <p class="sub-title">Tools & Platforms</p>
+                    <p class="description" id="p-languages">Git, Vim, Docker, Tableau,<br>
+                        RapidMiner, MySql, PostgreSql</p>
+
+                    <p class="sub-title">Design</p>
+                    <p class="description" id="p-languages">Photoshop, Illustrator, Figma,<br></p>
+                </div>
+
+                <!--- Certifications --->
+                <div class="certificates" id="sub-heads">
+                    <h1 class="sub-heads">Certifications</h1>
+                    <p class="description" id="cert-des">Java Certificate <span id="sub-title-span">@ HackerRank</span>
+                    </p>
+                    <p class="description" id="cert-des">React Certificate <span id="sub-title-span">@ HackerRank</span>
+                    </p>
+                    <p class="description" id="cert-des">Automation and Bot Creation <span id="sub-title-span">@
+                            Udemy</span></p>
+                    <p class="description" id="cert-des">Data Structures and Algorithms <span id="sub-title-span">@
+                            Udemy</span>
+                    </p>
+                </div>
+
+                <!--- Intresets --->
+
+                <div class="intrests" id="sub-heads">
+                    <h1 class="sub-heads">Interests</h1>
+                    <p class="description" id="p-languages">Photo-Manipulation, Photography, Travelling,<br>
+                        Reading, Music, Gaming</p>
+                </div>
+
             </div>
-
-            <!--- project 3 --->
-            <p class="sub-title">Text-Generator <span id="sub-title-span">- NLP</span></p>
-            <p class="written-in">Python</p>
-            <div class="description-container">
-              <p class="symbol">&#9657;</p>
-              <p class="description">A Natural Language Processing project to predict the next word in a sentence based<br>
-                on previous words in data being used using markov chains.<br>
-              </p>
-            </div>
-          </div>
-
-          <div class="co-curriculars" id="sub-heads">
-            <h1 class="sub-heads">Co-Curriculars</h1>
-
-            <!--- open-source --->
-
-            <p class="sub-title">Open-Source</p>
-            <div class="description-container">
-              <p class="symbol">&#9657;</p>
-              <p class="description">I really like exploring new open-source projects as I feel like it's a great way to keep<br>
-                yourself upto date with latest trends and how others write their code is also a<br> learning experience for me.
-              </p>
-            </div>
-            <div class="description-container">
-              <p class="symbol">&#9657;</p>
-              <p class="description">Contributed to open-source project segmentio/asm and word-to-pdf.</p>
-            </div>
-
-            <!--- competative --->
-
-            <p class="sub-title">Competitive Programming</p>
-            <div class="description-container">
-              <p class="symbol">&#9657;</p>
-              <p class="description">While I wouldn't consider myself a Competitive Programmer but I like to keep<br> my brain fresh and active with some Competitive Programming problems at<br>
-              various platforms like CodeChef, Leetcode, CodeForces and Hackerrank.</p>
-            </div>
-            <div class="description-container">
-              <p class="symbol">&#9657;</p>
-              <p class="description">Came in top-50 more than 2 Times at CodeChef.</p>
-            </div>
-            <div class="description-container">
-              <p class="symbol">&#9657;</p>
-              <p class="description">Up to elimanation round in SnakDown 2021.</p>
-            </div>
-          </div>
-
-          <!--- Certifications --->
-          <div class="certificates" id="sub-heads">
-            <h1 class="sub-heads">Certifications</h1>
-            <p class="sub-title">Java Certificate <span id="sub-title-span">@ HackerRank</span></p>
-            <p class="sub-title">React Certificate <span id="sub-title-span">@ HackerRank</span></p>
-            <p class="sub-title">Automation and Bot Creation <span id="sub-title-span">@ Udemy</span></p>
-            <p class="sub-title">Data Structures and Algorithms <span id="sub-title-span">@ FreeCodeCamp</span></p>
-          </div>
-
-        </div>
-
-        <!--- Right - side --->
-        <div class="right-side">
-
-          <!--- Skills --->
-
-          <div class="skills">
-
-            <!--- progamming Languages --->
-
-            <h1 class="sub-heads">Skills</h1>
-            <p class="sub-title">Programming Languages</p>
-            <p class="description" id="p-languages">C, C++, Java, JavaScript (ES6)<br>
-            TypeScript, Python, Go, Rust</p>
-
-            <p class="sub-title">Web Languages</p>
-            <p class="description" id="p-languages">HTML5, CSS, Sass, MarkDown<br>
-            </p>
-
-            <!--- Libraries & Frameworks --->
-
-            <p class="sub-title">Libraries & Frameworks</p>
-            <p class="description" id="p-languages">React, Node.Js, Express<br></p>
-
-            <!--- Tools & Platforms --->
-
-            <p class="sub-title">Tools & Platforms</p>
-            <p class="description" id="p-languages">Git, Vim, Docker,<br>
-              MySql, PostgreSql</p>
-
-            <p class="sub-title">Design</p>
-            <p class="description" id="p-languages">Photoshop, Illustrator, Figma,<br></p>
-          </div>
-
-          <!--- Intresets --->
-
-          <div class="intrests" id="sub-heads">
-            <h1 class="sub-heads">Interests</h1>
-            <p class="description" id="p-languages">Photo-Manipulation, Photography, Travelling,<br>
-              Reading, Music, Gaming</p>
-          </div>
-
-        </div>
 
         </div>
     </div>
-  </body>
+</body>
+
 </html>
