--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="head">
 
             <h1 class="head-name">Sachin Kumar</h1>
-            <p class="head-title">Front-End / Backend Engineer</p>
+            <p class="head-title">Software Engineer</p>
 
             <!--- contact and profile links -->
 
